<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".RaceActivity">

    <TextView
        android:id="@+id/win"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:text="Победители"
        android:textColor="@color/black"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/table"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TableLayout
        android:id="@+id/table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".MainActivity">

        <TableRow android:background="@drawable/border">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="@string/auto"
                android:textAlignment="center"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="@string/speed"
                android:textAlignment="center"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="@string/probability"
                android:textAlignment="center"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="@string/others"
                android:textAlignment="center"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="@string/distance"
                android:textAlignment="center"
                android:textColor="@color/black" />

        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/button3"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#E91E63"
        android:onClick="newCircle"
        android:text="@string/newRace"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/table" />

</androidx.constraintlayout.widget.ConstraintLayout>